<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.esa.cci.sst</groupId>
    <artifactId>sst-cci-tools</artifactId>
    <version>2.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>bc-mvn</id>
            <name>Public Maven Repository at Brockmann Consult</name>
            <url>http://www.brockmann-consult.de/mvn/os</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>bc-mvn-repo-public</id>
            <name>Public Maven Repository at Brockmann-Consult</name>
            <url>http://www.brockmann-consult.de/mvn/os</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>apache.org</id>
            <name>Maven Plugin Snapshots</name>
            <url>http://people.apache.org/repo/m2-snapshot-repository</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


    <dependencies>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.esa.beam</groupId>
            <artifactId>beam-core</artifactId>
            <version>5.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.esa.beam</groupId>
            <artifactId>beam-netcdf</artifactId>
            <version>1.1.3.5.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.esa.beam</groupId>
            <artifactId>beam-gpf</artifactId>
            <version>5.0-SNAPSHOT</version>
        </dependency>
        <!-- Scope: Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <forkMode>once</forkMode>
                    <argLine>-Xmx1050m -XX:MaxPermSize=128M</argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2.1</version>

                <configuration>
                    <finalName>${project.artifactId}</finalName>
                    <descriptors>
                        <descriptor>src/main/assembly/bin.xml</descriptor>
                    </descriptors>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <developers>
        <developer>
            <id>norman</id>
            <name>Norman Fomferra</name>
            <email>norman.fomferra@brockmann-consult.de</email>
            <organization>Brockmann Consult</organization>
            <roles>
                <role>Project Manager</role>
                <role>Java Developer</role>
            </roles>
        </developer>
        <developer>
            <id>ralf</id>
            <name>Ralf Quast</name>
            <email>ralf.quast@brockmann-consult.de</email>
            <organization>Brockmann Consult</organization>
            <roles>
                <role>Java Developer</role>
            </roles>
        </developer>
        <developer>
            <id>bettina</id>
            <name>Bettina Scholze</name>
            <organization>Brockmann Consult</organization>
            <roles>
                <role>Java Developer</role>
            </roles>
        </developer>
    </developers>

</project>